fixed homepage not showing listings

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -94,6 +94,8 @@ input[type=submit]:hover {
 	border-radius: 5%;
 }
 
+
+
 .hostLinks {
 	position: absolute;
 	right: 10px;
@@ -105,6 +107,22 @@ input[type=submit]:hover {
 	position: absolute;
 	top: 125px;
 	right: 125px;
+}
+
+.SignupContainer {
+	position: absolute;
+	top: 125px;
+	right: 125px;
+}
+
+#signupbox {
+	background-color: white;
+	border-radius: 1%;
+	height: 500px;
+	width: 500px;
+	opacity: 0.85;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0
+		rgba(0, 0, 0, 0.19);
 }
 
 #loginfail {
